--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         // --- CONFIGURATION ---
         // Set the base URL of your deployed backend function.
         // Using 127.0.0.1 (localhost) is the most reliable way for local development.
-        const backendUrlBase = 'http://127.0.0.1:5001';
+        const backendUrlBase = 'https://feasibility-638d.onrender.com/';
 
         // File input elements
         const templateFileInput = document.getElementById('template-file-input');
