--- a/index.html
+++ b/index.html
@@ -109,21 +109,43 @@
 
     <script type="module">
         const backendUrlBase = 'https://feasibility-638d.onrender.com';
-        // ... (DOM ELEMENT variables are the same) ...
+        
+        // --- DOM ELEMENT REFERENCES ---
+        const sourceFileInput = document.getElementById('source-file-input');
+        const viewerContainer = document.getElementById('viewer-container');
+        const viewer = document.getElementById('viewer');
+        const reportTableBody = document.getElementById('report-body');
+        const resultsSection = document.getElementById('results-section');
+        const loader = document.getElementById('loader');
+        const loaderText = document.getElementById('loader-text');
+        const errorMessage = document.getElementById('error-message');
+        const downloadPdfBtn = document.getElementById('download-pdf-btn');
+        const downloadDocxBtn = document.getElementById('download-docx-btn');
+        const placeholderText = document.getElementById('placeholder-text');
+        const zoomControls = document.getElementById('zoom-controls');
+        const zoomOutBtn = document.getElementById('zoom-out-btn');
+        const zoomInBtn = document.getElementById('zoom-in-btn');
+        const zoomResetBtn = document.getElementById('zoom-reset-btn');
+        const zoomLevel = document.getElementById('zoom-level');
 
         // --- STATE VARIABLES ---
-        let sourceFile = null, balloonCounter = 1, ocrData = null, pdfDoc = null, pdfScale = 1.5, balloonData = [];
+        let sourceFile = null;
+        let balloonCounter = 1;
+        let ocrData = null;
+        let pdfDoc = null;
+        let pdfScale = 1.5;
+        let balloonData = [];
 
         // --- EVENT LISTENERS ---
-        sourceFileInput.addEventListener('change', handleFileSelect);
-        viewerContainer.addEventListener('click', handleViewerClick);
-        zoomInBtn.addEventListener('click', () => changePdfScale(0.25));
-        zoomOutBtn.addEventListener('click', () => changePdfScale(-0.25));
-        zoomResetBtn.addEventListener('click', () => changePdfScale(0, true));
-        downloadPdfBtn.addEventListener('click', downloadPdfWithBalloons);
-        downloadDocxBtn.addEventListener('click', downloadDocxReport);
-        // --- FEATURE 2: Event delegation for remove buttons ---
-        reportTableBody.addEventListener('click', handleTableClick);
+        // Make sure elements exist before adding listeners
+        if (sourceFileInput) sourceFileInput.addEventListener('change', handleFileSelect);
+        if (viewerContainer) viewerContainer.addEventListener('click', handleViewerClick);
+        if (zoomInBtn) zoomInBtn.addEventListener('click', () => changePdfScale(0.25));
+        if (zoomOutBtn) zoomOutBtn.addEventListener('click', () => changePdfScale(-0.25));
+        if (zoomResetBtn) zoomResetBtn.addEventListener('click', () => changePdfScale(0, true));
+        if (downloadPdfBtn) downloadPdfBtn.addEventListener('click', downloadPdfWithBalloons);
+        if (downloadDocxBtn) downloadDocxBtn.addEventListener('click', downloadDocxReport);
+        if (reportTableBody) reportTableBody.addEventListener('click', handleTableClick);
 
 
         // --- CORE FUNCTIONS (handleFileSelect, renderPdf, renderAllPdfPages, changePdfScale are the same) ---
