--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
             cursor: crosshair;
         }
         .balloon {
-            position: absolute; width: 24px; height: 24px;
-            background-color: rgb(255, 0, 0); color: white;
+            position: absolute; width: 32px; height: 32px;
+            background-color: rgba(255, 0, 0, 0.85); color: white;
             border-radius: 50%; display: flex; align-items: center;
-            justify-content: center; font-size: 14px; font-weight: bold;
-            cursor: default; user-select: none; 
+            justify-content: center; font-size: 18px; font-weight: bold;
+            cursor: default; user-select: none;
             transform: translate(-50%, -50%); z-index: 10;
+            border: 2px solid rgb(180, 0, 0);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
             border: 2px solid white; box-shadow: 0 0 0 1px red;
         }
         /* Style for the new remove button */
